<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:background="@drawable/verde"
tools:context=".retete.ReteteBogateInProteineActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/p1"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:text="@string/Conopida_la_cuptor"
        android:textAlignment="center"
        android:textStyle="bold"
        android:typeface="serif" />

    <Button
        android:id="@+id/p2"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/Salata_asiatica"
        android:textAlignment="center"
        android:textStyle="bold"
        android:typeface="serif" />

    <Button
        android:id="@+id/p3"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:text="@string/somon_cu_bulgur"
        android:textAlignment="center"
        android:textStyle="bold"
        android:typeface="serif" />

    <Button
        android:id="@+id/p4"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:text="@string/tofu_cu_branza_cuscus_si_ton"
        android:textAlignment="center"
        android:textStyle="bold"
        android:typeface="serif" />

</LinearLayout>


</ScrollView>

