<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/verde"
    tools:context=".retete.ReteteBogateInFibreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/f1"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_centerHorizontal="true"
            android:text="@string/polenta"
            android:textAlignment="center"
            android:textStyle="bold"
            android:typeface="serif" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/f2"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_centerHorizontal="true"
            android:text="@string/Paste_cremoase_fit_cu_zucchini"
            android:textAlignment="center"
            android:textStyle="bold"
            android:typeface="serif" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/f3"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_centerHorizontal="true"
            android:text="@string/piept_pui"
            android:textAlignment="center"
            android:textStyle="bold"
            android:typeface="serif" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/f4"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_centerHorizontal="true"
            android:text="@string/lipie"
            android:textAlignment="center"
            android:textStyle="bold"
            android:typeface="serif" />


    </LinearLayout>


</ScrollView>

