<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/micdejun"
    tools:context=".retete.DesertActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <Button
            android:id="@+id/d3"
            style="?android:attr/borderlessButtonStyle"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:text="@string/Budinca_de_chia_cu_pudra_proteica"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:typeface="serif" />

        <Button
            android:id="@+id/d2"
            style="?android:attr/borderlessButtonStyle"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:text="@string/briose_cu_ciocolata_neagra_si_banane"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:typeface="serif" />

        <Button
            android:id="@+id/d1"
            android:textAlignment="center"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:text="@string/iaurt_cu_fructe_exotice"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:typeface="serif" />

        <Button
            android:id="@+id/d4"
            android:textAlignment="center"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/biscuiti_cu_banane_si_ovaz"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:typeface="serif" />
</LinearLayout>


</ScrollView>

