<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:background="@drawable/w1"

    tools:context=".retete.BudincaActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="50dp"
                android:background="@drawable/text_background"
                android:gravity="left"
                android:text="@string/INGREDIENTE"
                android:textColor="@color/teal_200"
                android:textSize="24dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="400dp"
                android:layout_height="150dp"
                android:gravity="right"
                app:srcCompat="@drawable/chia" />

            <TextView
                android:id="@+id/editTextTextPersonName"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="->lapte vegetal"

                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="18dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"

                android:text="-> seminte de chia"
                tools:ignore="TouchTargetSizeCheck" />


            <TextView
                android:id="@+id/editTextTextPersonName5"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="-> mango"
                tools:ignore="TouchTargetSizeCheck" />


            <TextView
                android:id="@+id/Mod"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_margin="50dp"
                android:background="@drawable/text_background"
                android:gravity="left"
                android:text="@string/Mod_de_preparare"
                android:textColor="@color/teal_200"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pass1"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pass2"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pass3"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pass4"
                android:textSize="20dp" />



        </LinearLayout>
    </ScrollView>