<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mancare">

 <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/text_background"
        android:gravity="center"
        android:text="@string/welcome_to_yourfitnessapp"
        android:textColor="#070105"
        android:textSize="36dp"
        android:textStyle="bold"
        android:typeface="serif" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/welcome"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="105dp"
        android:layout_marginTop="134dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_custom"
        android:text="@string/SIGN_IN"
        android:textColor="#000000"
        app:backgroundTint="@null"
        app:backgroundTintMode="add" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="105dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_custom"
        android:text="@string/sign_upp"
        android:textColor="#000000"
        android:textColorHint="@color/black"
        app:backgroundTint="@null"
        app:backgroundTintMode="add" />
</RelativeLayout>